Sonar Cloud Fix